--- a/src/03-stensible-style/styles/costume.style.css
+++ b/src/03-stensible-style/styles/costume.style.css
@@ -15,3 +15,9 @@
   width: calc(100% - 20px);
   border-radius: 20px;
 }
+
+.costume-buttons button,
+.costume-buttons div {
+  border-color: white;
+  color: white;
+}
